--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
             <img src="./img/Alecto-logo.png" class="navigation__logo" alt="logo">
             <menu class="navigation__menu">
                 <li class="navigation__item">
-                    <a href="#">home</a>
+                    <a>home</a>
                 </li>
                 <li class="navigation__item">
                     <a href="#">about</a>
@@ -60,6 +60,7 @@
                 <a href="#">Learn more</a>
             </div>
         </section>
+
     </header>
     
 
