--- a/app/index.html
+++ b/app/index.html
@@ -114,6 +114,17 @@
             </div>
             <a href="#" class="about__more">Learn more</a>
         </section>
+        <section class="camera">
+            <div class="camera__img">
+                <img src="./img/Samsung-NX20-3.png" alt="camera">
+            </div>
+            <div class="camera__content">
+                <h2>Camera</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque elementum augue sed est porttitor, ac blandit nisl posuere. Pellentesque hendrerit suscipit mi eu lobortis. Curabitur consectetur enim id elementum accumsan. Quisque metus purus, iaculis id tincidunt non, blandit quis sapien.</p>
+                <a class="camera__more" href="#">Learn more</a>
+            </div>
+
+        </section>
     </main>
 
 
