--- a/app/index.html
+++ b/app/index.html
@@ -109,7 +109,7 @@
                           </svg>
                     </div>
                     <h3>Lorem ipsum</h3>
-                    <p>Nam varius accumsan elementum. Aliquam fermentum eros in suscipit scelerisque.</p>
+                    <p>Nam varius accumsan elementum. Aliquam fermentum eros in suscipit scelerisque. lor</p>
                 </div>
             </div>
             <a href="#" class="about__more">Learn more</a>
@@ -120,10 +120,21 @@
             </div>
             <div class="camera__content">
                 <h2>Camera</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque elementum augue sed est porttitor, ac blandit nisl posuere. Pellentesque hendrerit suscipit mi eu lobortis. Curabitur consectetur enim id elementum accumsan. Quisque metus purus, iaculis id tincidunt non, blandit quis sapien.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque elementum augue sed est porttitor, ac blandit nisl posuere. Pellentesque hendrerit suscipit mi eu lobortis. Curabitur consectetur enim id elementum accumsan. Quisque metus purus, iaculis id tincidunt non, blandit quis sapien. lor</p>
                 <a class="camera__more" href="#">Learn more</a>
             </div>
-
+        </section>
+        <section class="laptop">
+            <div class="laptop__content">
+                <h2>Dolor sit amet</h2>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque elementum augue sed est porttitor, ac blandit nisl posuere. Pellentesque hendrerit suscipit mi eu lobortis. Curabitur consectetur enim id elementum accumsan. Quisque metus purus, iaculis id tincidunt non, blandit quis sapien. 
+                </p>
+                <a href="#" class="laptop__more">Learn more</a>
+            </div>
+            <div class="laptop__img">
+                <img src="./img/laptop.png"  alt="laptop">
+            </div>
         </section>
     </main>
 
