--- a/app/index.html
+++ b/app/index.html
@@ -136,6 +136,56 @@
                 <img src="./img/laptop.png"  alt="laptop">
             </div>
         </section>
+        <section class="worker">
+            <div class="worker__slider content">
+                <div class="worker__section">
+                    <img src="./img/worker-people.png" alt="worker one">
+                    <h2>
+                        <span>Alecto</span> lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                    </h2>
+                    <p>
+                        Adam Czajkowski, CEO&Founder at symu.co
+                    </p>
+                </div>
+                <div class="worker__section">
+                    <img src="./img/worker-people.png" alt="worker one">
+                    <h2>
+                        <span>Alecto</span> lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                    </h2>
+                    <p>
+                        Adam Czajkowski, CEO&Founder at symu.co
+                    </p>
+                </div>
+                <div class="worker__section">
+                    <img src="./img/worker-people.png" alt="worker one">
+                    <h2>
+                        <span>Alecto</span> lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                    </h2>
+                    <p>
+                        Adam Czajkowski, CEO&Founder at symu.co
+                    </p>
+                </div>
+                <div class="worker__section">
+                    <img src="./img/worker-people.png" alt="worker one">
+                    <h2>
+                        <span>Alecto</span> lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                    </h2>
+                    <p>
+                        Adam Czajkowski, CEO&Founder at symu.co
+                    </p>
+                </div>
+                <div class="worker__section">
+                    <img src="./img/worker-people.png" alt="worker one">
+                    <h2>
+                        <span>Alecto</span> lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                    </h2>
+                    <p>
+                        Adam Czajkowski, CEO&Founder at symu.co
+                    </p>
+                </div>
+            </div>
+            
+        </section>
     </main>
 
 
