--- a/app/index.html
+++ b/app/index.html
@@ -184,7 +184,52 @@
                     </p>
                 </div>
             </div>
-            
+        </section>
+        <section class="section">
+            <h2>Our Services</h2>
+            <p>Nam varius accumsan elementum. Aliquam fermentum eros in suscipit scelerisque.</p>
+            <div class="section__inner">
+                <div class="section__content">
+                    <svg id="Portfolio" xmlns="http://www.w3.org/2000/svg" width="94" height="94" viewBox="0 0 94 94">
+                        <circle class="cls-1" cx="47" cy="47" r="47"/>
+                        <path id="Portfolio-2" data-name="Portfolio" class="cls-2" d="M320,4726.39v-3a2,2,0,0,0-2-1.99H306a1.994,1.994,0,0,0-2,1.99v3h-6a1.994,1.994,0,0,0-2,1.99v18.97a2,2,0,0,0,2,2h28a2,2,0,0,0,2-2v-18.97a2,2,0,0,0-2-1.99h-6Zm-13-2h10v2H307v-2Zm18,4.99v5.99H315v-1h-6v1H299v-5.99h26Zm-26,16.97v-7.98h10v0.99h6v-0.99h10v7.98H299Z" transform="translate(-265 -4688)"/>
+                    </svg>
+                    <h3>Portfolio</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque elementum augue sed est porttitor, ac blandit nisl posuere.
+                    </p>
+                </div>
+                <div class="section__content">
+                    <svg id="Design" xmlns="http://www.w3.org/2000/svg" width="94" height="94" viewBox="0 0 94 94">
+                        <circle class="cls-1" cx="47" cy="47" r="47"/>
+                        <path id="Design-2" data-name="Design" class="cls-2" d="M1082.65,4727.65l-8.3-8.3a1.207,1.207,0,0,0-1.7,0L1051,4741v10h10l21.65-21.65a1.179,1.179,0,0,0,.35-0.85A1.163,1.163,0,0,0,1082.65,4727.65Zm-27.09,12.79,13.88-13.88,6,6-13.88,13.88Zm-1.56,2.68,4.88,4.88H1054v-4.88Zm23.56-12.68-6-6,1.94-1.94,6,6Z" transform="translate(-1020 -4688)"/>
+                    </svg>
+                    <h3>Design</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque elementum augue sed est porttitor, ac blandit nisl posuere.
+                    </p>
+                </div>
+                <div class="section__content">
+                    <svg id="Branding" xmlns="http://www.w3.org/2000/svg" width="94" height="94" viewBox="0 0 94 94">
+                        <circle class="cls-1" cx="47" cy="47" r="47"/>
+                        <path id="Branding-2" data-name="Branding" class="cls-2" d="M326,5003H306a2,2,0,0,0-2,2v6h-6a2,2,0,0,0-2,2v20a2,2,0,0,0,2,2h20a2,2,0,0,0,2-2v-6h6a2,2,0,0,0,2-2v-20A2,2,0,0,0,326,5003Zm-9,29H299v-18h5v11a2,2,0,0,0,2,2h11v5Zm8-8H307v-18h18v18Z" transform="translate(-265 -4972)"/>
+                    </svg>
+                    <h3>Branding</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque elementum augue sed est porttitor, ac blandit nisl posuere.
+                    </p>
+                </div>
+                <div class="section__content">
+                    <svg id="Development" xmlns="http://www.w3.org/2000/svg" width="94" height="94" viewBox="0 0 94 94">
+                        <circle class="cls-1" cx="47" cy="47" r="47"/>
+                        <path id="Development-2" data-name="Development" class="cls-2" d="M1079.91,5019.47a20.137,20.137,0,0,1-5.96,5.77,12.493,12.493,0,0,1-5.2,9.43,1.485,1.485,0,0,1-.88.28,1.647,1.647,0,0,1-.57-0.11,1.484,1.484,0,0,1-.9-1.14,13.235,13.235,0,0,0-1.73-4.35c-1,.27-1.97.5-2.87,0.65a1.153,1.153,0,0,1-.26.03,1.516,1.516,0,0,1-1.06-.44l-4.07-4.07a1.537,1.537,0,0,1-.42-1.32c0.16-.91.38-1.88,0.65-2.87a13.19,13.19,0,0,0-4.34-1.73,1.5,1.5,0,0,1-1.14-.9,1.48,1.48,0,0,1,.17-1.45,12.532,12.532,0,0,1,9.42-5.21,20.633,20.633,0,0,1,5.77-5.96c4.38-2.85,9.59-3.08,14.98-3.08a1.5,1.5,0,0,1,1.5,1.5C1083,5009.68,1082.76,5015.1,1079.91,5019.47Zm-11.44,12.19a10.049,10.049,0,0,0,2.74-4.83,35.245,35.245,0,0,1-4.09,1.76A17.009,17.009,0,0,1,1068.47,5031.66Zm-14.13-14.13a17.322,17.322,0,0,1,3.07,1.35,33.6,33.6,0,0,1,1.76-4.09A10.049,10.049,0,0,0,1054.34,5017.53Zm13.82-8.93c-4.77,3.11-7.94,9.81-9.07,15.36l2.95,2.94c5.55-1.13,12.25-4.29,15.36-9.06,2.15-3.32,2.54-7.46,2.59-11.83C1075.62,5006.06,1071.47,5006.44,1068.16,5008.6Zm4.34,7.4a2.5,2.5,0,1,1,2.5-2.5A2.5,2.5,0,0,1,1072.5,5016Zm-19.39,13.77a2.5,2.5,0,1,1,3.12,3.12l-3.58,1.09a0.772,0.772,0,0,1-.15.02,0.5,0.5,0,0,1-.5-0.5,0.772,0.772,0,0,1,.02-0.15Z" transform="translate(-1020 -4972)"/>
+                      </svg>
+                    <h3>Development</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque elementum augue sed est porttitor, ac blandit nisl posuere.
+                    </p>
+                </div>
+            </div>
         </section>
     </main>
 
