--- a/app/index.html
+++ b/app/index.html
@@ -231,6 +231,45 @@
                 </div>
             </div>
         </section>
+        <section class="team">
+            <h2 class="team__title">Meet our team</h2>
+            <p class="team__subtitle">
+                Nam varius accumsan elementum. Aliquam fermentum eros in suscipit scelerisque.
+            </p>
+            <div class="team__list">
+                <div class="team__section">
+                    <img src="./img/team/image.jpg" alt="people">
+                </div>
+                <div class="team__section">
+                    <img src="./img/team/image (1).jpg" alt="people">
+                </div>
+                <div class="team__section">
+                    <img src="./img/team/image (2).jpg" alt="people">
+                </div>
+                <div class="team__section">
+                    <img src="./img/team/image (3).jpg" alt="people">
+                </div>
+                <div class="team__section">
+                    <img src="./img/team/image (4).jpg" alt="people">
+                </div>
+                <div class="team__section">
+                    <img src="./img/team/image (5).jpg" alt="people">
+                </div>
+                <div class="team__section">
+                    <img src="./img/team/image (6).jpg" alt="people">
+                </div>
+                <div class="team__section">
+                    <img src="./img/team/image (7).jpg" alt="people">
+                </div>
+                <div class="team__section">
+                    <img src="./img/team/image (8).jpg" alt="people">
+                </div>
+                <div class="team__section">
+                    <img src="./img/team/image (10).jpg" alt="people">
+                </div>
+
+            </div>
+        </section>
     </main>
 
 
