--- a/app/index.html
+++ b/app/index.html
@@ -267,8 +267,60 @@
                 <div class="team__section">
                     <img src="./img/team/image (10).jpg" alt="people">
                 </div>
-
             </div>
+        </section>
+        <section class="prising">
+            <h2 class="prising__title">Pricing</h2>
+            <p class="prising__subtitle">
+                Nam varius accumsan elementum. Aliquam fermentum eros in suscipit scelerisque.
+            </p>
+            <div class="prising__inner content">
+                <div class="prising__section">
+                    <h3>$29</h3>
+                    <span>Lorem ipsum license</span>
+                    <p>
+                        Lorem ipsum dolor sit amet
+                        consectetur adipiscing elit
+                        Ante sed interdum labortis
+                        Est nisi efficitur lactus
+                    </p>
+                    <button>purchase</button>
+                </div>
+                <div class="prising__section">
+                    <h3>$39</h3>
+                    <span>Lorem ipsum license</span>
+                    <p>
+                        Lorem ipsum dolor sit amet
+                        consectetur adipiscing elit
+                        Ante sed interdum labortis
+                        Est nisi efficitur lactus
+                    </p>
+                    <button>purchase</button>
+                </div>
+                <div class="prising__section">
+                    <h3>$49</h3>
+                    <span>Lorem ipsum license</span>
+                    <p>
+                        Lorem ipsum dolor sit amet
+                        consectetur adipiscing elit
+                        Ante sed interdum labortis
+                        Est nisi efficitur lactus
+                    </p>
+                    <button>purchase</button>
+                </div>
+                <div class="prising__section">
+                    <h3>$89</h3>
+                    <span>Lorem ipsum license</span>
+                    <p>
+                        Lorem ipsum dolor sit amet
+                        consectetur adipiscing elit
+                        Ante sed interdum labortis
+                        Est nisi efficitur lactus
+                    </p>
+                    <button>purchase</button>
+                </div>
+            </div>
+
         </section>
     </main>
 
