agents section desktop

--- a/app/index.html
+++ b/app/index.html
@@ -320,7 +320,19 @@
                     <button>purchase</button>
                 </div>
             </div>
-
+        </section>
+        <section class="agents ">
+            <div class="agents__inner content">
+                <div class="agents__info">
+                    <h2>Dolor sit amet</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque elementum augue sed est porttitor, ac blandit nisl posuere. Pellentesque hendrerit suscipit mi eu lobortis. Curabitur consectetur enim id elementum accumsan. Quisque metus purus, iaculis id tincidunt non, blandit quis sapien. 
+                    </p>
+                    <button>
+                        Learn more
+                    </button>
+                </div>
+            </div>
         </section>
     </main>
 
