agents cestion desktop

--- a/app/index.html
+++ b/app/index.html
@@ -328,11 +328,13 @@
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque elementum augue sed est porttitor, ac blandit nisl posuere. Pellentesque hendrerit suscipit mi eu lobortis. Curabitur consectetur enim id elementum accumsan. Quisque metus purus, iaculis id tincidunt non, blandit quis sapien. 
                     </p>
-                    <button>
-                        Learn more
-                    </button>
+                    <a href="#">Learn more</a>
                 </div>
             </div>
+        </section>
+        <section class="master">
+            <h2>Try our <strong>PSD template</strong> on symu.co</h2>
+            <a href="#">symu.co/freebies</a>
         </section>
     </main>
 
