footer and fixed gulp

--- a/app/index.html
+++ b/app/index.html
@@ -337,7 +337,16 @@
             <a href="#">symu.co/freebies</a>
         </section>
     </main>
-
+    <footer class="content">
+        <h4>All Rights Reserved by Alecto</h4>
+        <menu class="footer__menu">
+            <li class="footer__menu-active">Home</li>
+            <li>About</li>
+            <li>Work</li>
+            <li>Service</li>
+            <li>Blog</li>
+        </menu>
+    </footer>
 
     <script src="./js/jquery-3.5.1.min.js"></script>
     <script src="./js/slick.min.js"></script>
