--- a/app/index.html
+++ b/app/index.html
@@ -187,7 +187,7 @@
         </section>
         <section class="section">
             <h2>Our Services</h2>
-            <p>Nam varius accumsan elementum. Aliquam fermentum eros in suscipit scelerisque.</p>
+            <p class="section__subtitle">Nam varius accumsan elementum. Aliquam fermentum eros in suscipit scelerisque.</p>
             <div class="section__inner">
                 <div class="section__content">
                     <svg id="Portfolio" xmlns="http://www.w3.org/2000/svg" width="94" height="94" viewBox="0 0 94 94">
