mobile version adaptive

--- a/app/index.html
+++ b/app/index.html
@@ -340,11 +340,15 @@
     <footer class="content">
         <h4>All Rights Reserved by Alecto</h4>
         <menu class="footer__menu">
-            <li class="footer__menu-active">Home</li>
-            <li>About</li>
-            <li>Work</li>
-            <li>Service</li>
-            <li>Blog</li>
+            <li class="footer__menu-active">
+                <a>Home</a>
+            </li>
+            <li>
+                <a href="#">About</a>
+            </li>
+            <li><a href="#">Work</a></li>
+            <li><a href="#">Service</a></li>
+            <li><a href="#">Blog</a></li>
         </menu>
     </footer>
 
