--- a/app/index.html
+++ b/app/index.html
@@ -20,13 +20,13 @@
                     <a href="#about">about</a>
                 </li>
                 <li class="navigation__item">
-                    <a href="#">work</a>
+                    <a href="#work">work</a>
                 </li>
                 <li class="navigation__item">
-                    <a href="#">services</a>
+                    <a href="#services">services</a>
                 </li>
                 <li class="navigation__item">
-                    <a href="#">blog</a>
+                    <a href="#blog">blog</a>
                 </li>            
             </menu>
         </nav>
@@ -63,7 +63,7 @@
         <button id="#" class="header__button"></button>
     </header>
     <main>
-        <section class="about">
+        <section class="about" id="about">
             <h2 class="about__title">About us</h2>
             <p class="about__subtitle">Nam varius accumsan elementum. Aliquam fermentum eros in suscipit scelerisque.</p>
             <div class="about__holder content">
@@ -136,7 +136,7 @@
                 <img src="./img/laptop.png"  alt="laptop">
             </div>
         </section>
-        <section class="worker">
+        <section class="worker" id="work">
             <div class="worker__slider content">
                 <div class="worker__section">
                     <img src="./img/worker-people.png" alt="worker one">
@@ -231,7 +231,7 @@
                 </div>
             </div>
         </section>
-        <section class="team">
+        <section class="team" id="services">
             <h2 class="team__title">Meet our team</h2>
             <p class="team__subtitle">
                 Nam varius accumsan elementum. Aliquam fermentum eros in suscipit scelerisque.
@@ -321,7 +321,7 @@
                 </div>
             </div>
         </section>
-        <section class="agents ">
+        <section class="agents " id="blog">
             <div class="agents__inner content">
                 <div class="agents__info">
                     <h2>Dolor sit amet</h2>
